--- a/front/src/app/components/comic-detail/comic-detail.component.scss
+++ b/front/src/app/components/comic-detail/comic-detail.component.scss
@@ -1,7 +1,7 @@
 
-button{
-    background-color: white;
-    border:solid;
-    font-size:large;
-    border-radius: 20px;
-}
+// button{
+//     background-color: white;
+//     border:solid;
+//     font-size:large;
+//     border-radius: 20px;
+// }
