--- a/front/src/app/components/login/login.component.scss
+++ b/front/src/app/components/login/login.component.scss
@@ -4,7 +4,8 @@
     align-items: center;
     justify-items: center;
     width: 80%;
-    margin-top: 15%;
+    margin-top: 2%;
+    margin-bottom: -2%;
     
 }
 .card{
@@ -91,5 +92,14 @@
     } 
     .registeryou{
         display:inline;
-    }            
+    }    
+    .container{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        align-items: center;
+        justify-items: center;
+        width: 87%;
+        margin-top: 5%;
+        margin-bottom: -2%;
+    }        
 }
