--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -12,20 +12,20 @@
 
       <div class="form-outline form-white d-flex flex-column align-items-center ">
         <label class="form-label mt-3" for="typeEmailX">Correo</label>
-        <input type="email" id="typeEmailX" class="form-control text-center form-control-lg" />
+        <input type="email" id="typeEmailX" [(ngModel)]="email" class="form-control text-center form-control-lg" />
 
       </div>
 
       <div class="form-outline form-white mb-3 d-flex flex-column align-items-center">
         <label class="form-label" for="typePasswordX">Contraseña</label>
-        <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+        <input type="password" id="typePasswordX" [(ngModel)]="password"  class="form-control form-control-lg" />
 
       </div>
 
       <p class="small mt-4 pb-lg-1"><a class="text2" href="#!">¿Has olvidado la contraseña?</a></p>
       <p class="small mt-4 pb-lg-1  registeryou text2">¿No estás registrado?<a href="#!"> <span> Resistrate </span></a>
       </p>
-      <button class="btn btn-light  mt-2 px-4" type="submit">Enviar</button>
+      <button class="btn btn-light  mt-2 px-4" (click)="login()" type="submit">Enviar</button>
 
     </div>
   </div>
