deleted unnecesary views

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,6 @@
-
+<app-headerclient></app-headerclient>
+<app-banner></app-banner>
 <router-outlet></router-outlet> 
-
-
+<app-footer></app-footer>
 
 
