--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-headerclient></app-headerclient>
+<app-headerlogin></app-headerlogin>
 <app-banner></app-banner>
 <router-outlet></router-outlet> 
 <app-footer></app-footer>
