--- a/front/src/app/shared/headerclient/headerclient.component.html
+++ b/front/src/app/shared/headerclient/headerclient.component.html
@@ -14,6 +14,7 @@
     <div class="icons d-none d-sm-none d-none d-md-block">
       <img src="/assets/cart.png" alt="cart">
       <img src="/assets/user.png" alt="user">
+      <span>{{ getLoggedInUsername() }}</span> 
     </div>
   </div>
 </nav>
