--- a/front/src/app/components/comic-detail/comic-detail.component.html
+++ b/front/src/app/components/comic-detail/comic-detail.component.html
@@ -1,3 +1,5 @@
+<app-headerclient></app-headerclient>
+
 <div *ngIf="comic" class="row my-5" style="overflow-y: auto; ">
   <div class="col-md-6 col-sm-12" >
     <img [src]="'../../../assets/images/comics/'+comic.photo" alt="{{ comic.title }} Cover" class="img-fluid m-5">
@@ -23,3 +25,4 @@
   
   
 </div>
+<app-footer></app-footer>
