--- a/front/src/app/components/comic-table/comic-table.component.html
+++ b/front/src/app/components/comic-table/comic-table.component.html
@@ -86,7 +86,7 @@
               <p>Autor</p>
               <button
               class="btn btn-link btn-sm fixed-sort-buttons"
-              (click)="toggleSortOrderPopup3('A-Z')"
+              (click)="toggleSortOrderPopup('A-Z')"
   
             >
               <img src="../../../assets/G49.png" alt="Orden A-Z" />
