--- a/front/src/app/components/comic-detail/comic-detail.component.html
+++ b/front/src/app/components/comic-detail/comic-detail.component.html
@@ -18,7 +18,7 @@
     <h3 style="text-align: right;" class="m-5">{{ comic.price }} €</h3>
   </div>
   <div class="col-sm-5.offset-md-3  text-center">
-    <button class="px-5 mx-5"><h3>Añadir al carrito</h3></button>
+    <button class="px-5 mx-5"  (click)="addToCart()"><h3>Añadir al carrito</h3></button>
   </div>
   
   
