--- a/front/src/app/components/comic-table/comic-table.component.scss
+++ b/front/src/app/components/comic-table/comic-table.component.scss
@@ -1,4 +1,3 @@
-
 table {
   margin-top: 3vh;
   color: #fff;
@@ -10,15 +9,17 @@ table {
   border-collapse: separate;
   border: 0.4vh solid black;
 }
-tbody{
+
+tbody {
   text-align: center;
   vertical-align: middle;
 }
-.table-responsive{
-margin-top: 0.1vh;
+
+.table-responsive {
+  margin-top: 0.1vh;
 }
 
-.container-th{
+.container-th {
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -26,14 +27,15 @@ margin-top: 0.1vh;
   position: relative;
 }
 
-.container-th p{
-margin: 0px;
+.container-th p {
+  margin: 0px;
 }
 
-.search{
+.search {
   margin-left: 100%;
 }
-label{
+
+label {
   margin: 0px;
 }
 
@@ -65,10 +67,10 @@ td {
 
 .btn {
 
-margin-left: 0px;
+  margin-left: 0px;
   justify-content: center;
   padding: 0 0.5vh;
-  width: 2vh; 
+  width: 2vh;
 }
 
 tr {
@@ -118,11 +120,11 @@ tr {
 }
 
 .filter-icon {
-margin-left: 56%; 
+  margin-left: 56%;
   cursor: pointer;
-  width: 3vh; 
+  width: 3vh;
   margin-left: 100%;
-/*   margin-right: 8vh;  */
+  /*   margin-right: 8vh;  */
 }
 
 .btn-primary {
@@ -132,11 +134,12 @@ margin-left: 56%;
 
 .search {
   text-align: left;
-/*   width: 4vh;  */
+  /*   width: 4vh;  */
 }
 
-img, svg {
-  width: 2.3vh; 
+img,
+svg {
+  width: 2.3vh;
   vertical-align: middle;
 }
 
@@ -171,14 +174,14 @@ img, svg {
   }
 } */
 
-.container{
+.container {
   max-width: 100%;
 }
 
 
 @media (min-width: 768px) {
   .pagination-container {
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -193,29 +196,34 @@ img, svg {
     font-size: 2.70vh;
     margin-top: 3.2vh;
   }
+
   .pagination-container {
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 2vh;
     margin-bottom: 7.5vh;
   }
+
   .filter-icon {
-    margin-left: 56%; 
+    margin-left: 56%;
     cursor: pointer;
-    width: 3vh; 
+    width: 3vh;
     margin-left: 3vh;
   }
-  img, svg {
-    width: 2.3vh; 
+
+  img,
+  svg {
+    width: 2.3vh;
     vertical-align: middle;
   }
-  .search{
- /*    margin-left: 4%; */
+
+  .search {
+    /*    margin-left: 4%; */
     cursor: pointer;
-    width: 3vh; 
-/*     margin-right: 8vh;  */
+    width: 3vh;
+    /*     margin-right: 8vh;  */
   }
 }
 
@@ -226,8 +234,8 @@ img, svg {
   }
 }
 
-@media (min-width: 992px){
-  .container-search{
+@media (min-width: 992px) {
+  .container-search {
     display: none;
   }
 
@@ -235,8 +243,8 @@ img, svg {
 
 
 
-@media (min-width: 290px) and (max-width:991px){
-  .container-search{
+@media (min-width: 290px) and (max-width:991px) {
+  .container-search {
     display: flex;
     justify-content: center;
     max-width: 500px;
@@ -248,79 +256,84 @@ img, svg {
 
   }
 
-  .search-up{
+  .search-up {
     width: 90%;
     border-radius: 30px;
     padding: 7px;
   }
 
-  .search-up::placeholder{
+  .search-up::placeholder {
     text-align: center;
   }
 
-  .image-search-1{
+  .image-search-1 {
     width: 20px;
     height: 20px;
     margin-left: 10px;
   }
-  
+
   table {
     font-size: 3vw;
   }
+
   .pagination-container {
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 1vh;
     margin-bottom: 2vh;
   }
+
   .filter-icon {
     display: none;
 
   }
-  img, svg {
-    width: 1.4vh; 
+
+  img,
+  svg {
+    width: 1.4vh;
     margin-left: 1.2px;
 
   }
-/*   .search{
+
+  /*   .search{
     margin-left: 4%;
     cursor: pointer;
     width: 1.5vh; 
     margin-right: 8vh;  
   } */
 
-  .quitar{
+  .quitar {
     display: none;
   }
 
-  th{
+  th {
     font-size: 2.1vw;
     vertical-align: middle;
   }
 
-  .btn{
+  .btn {
     padding: 0px;
     width: auto;
     margin: 0px;
   }
 
-  label{
+  label {
     display: none;
   }
 
-  .quitar-2{
+  .quitar-2 {
     display: none;
   }
 
-  .container-th{
+  .container-th {
     display: flex;
     align-items: center;
     justify-content: center;
   }
 
-  .search{
+  .search {
     display: none;
   }
 }
