--- a/front/src/app/components/comic-detail/comic-detail.component.html
+++ b/front/src/app/components/comic-detail/comic-detail.component.html
@@ -19,6 +19,17 @@
   </div>
   <div class="col-sm-5.offset-md-3  text-center">
     <button class="px-5 mx-5"  (click)="addToCart()"><h3>Añadir al carrito</h3></button>
+    <ng-template #modalContent let-c="close">
+      <div class="modal-header">
+        <h4 class="modal-title">{{ message }}</h4>
+        <button type="button" class="close" (click)="c('Close click')">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {{ message }}
+      </div>
+    </ng-template>
   </div>
   
   
