added register ts

--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -35,3 +35,5 @@
     <button class="btn2 " type="submit"><strong>Crear cuenta</strong></button>
   </div>
 </div>
+
+<app-register-a></app-register-a>
