--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,4 @@
 
-<!-- <router-outlet></router-outlet> 
-<app-footer></app-footer> -->
-<app-shoping-cart-client></app-shoping-cart-client>
+<router-outlet></router-outlet> 
+<!-- <app-footer></app-footer>  -->
+<!-- <app-shoping-cart-client></app-shoping-cart-client> -->
