--- a/front/src/app/components/comic-table/comic-table.component.html
+++ b/front/src/app/components/comic-table/comic-table.component.html
@@ -35,26 +35,20 @@
               <button class="btn btn-link btn-sm fixed-sort-buttons" (click)="toggleSortOrderPopup('A-Z')">
                 <img src="../../../assets/G49.png" alt="Orden Z-A" />
               </button>
-           
-              <button class="btn btn-link btn-sm fixed-sort-buttons" (click)="toggleSearch()">
-                <img class="filter-icon" src="../../../assets/buscar.png" alt="Buscar" />
-              </button>
-              </div>
+                <button class="btn btn-link btn-sm fixed-sort-buttons" (click)="toggleSearch()">
+                <img  class="filter-icon" src="../../../assets/buscar.png" alt="Buscar" />
+                </button>
+            </div>
               <div #popup (mouseleave)="onMouseOut(popup)" class="filter-popup" *ngIf="showSearchPopup">
-                <input
-                  id="searchInput"
-                  type="text"
-                  class="form-control"
-                  [(ngModel)]="searchTerm"
-                  (input)="applyFilters()"
-                  placeholder="Buscar Titulo..."
-                />
+                <input id="searchInput" type="text" class="form-control" [(ngModel)]="searchTerm" (input)="applyFilters()"
+                  placeholder="Buscar Titulo..." />
                 <button class="btn btn-primary" (click)="refreshTable()">Refrescar</button>
               </div>
-            </th>
-  
-            <th class="col-md-2">
-              <div class="container-th">
+           
+          </th>
+
+          <th class="col-md-2">
+            <div class="container-th">
               <p>Autor</p>
               <button class="btn btn-link btn-sm fixed-sort-buttons" (click)="toggleSortOrderPopup('A-Z')">
                 <img src="../../../assets/G49.png" alt="Orden A-Z" />
@@ -110,72 +104,52 @@
               </select>
               <button class="btn btn-primary" (click)="refreshTable()">Refrescar</button>
             </div>
-            </th>
-         
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let comic of comicsOnCurrentPage">
-            <td><a [routerLink]="['/comic', comic.isbn]"></a>{{ comic.isbn }}</td>
-            <td><a [routerLink]="['/comic', comic.isbn]">{{ comic.title }}</a></td>
-            <td>{{ comic.author }}</td>
-            <td>
-              <span *ngFor="let genre of comic.genres; let last = last">
-                {{ genre.name }}{{ !last ? ", " : "" }}
-              </span>
-            </td>
-            <td>{{ comic.price }}</td>
-            <td>{{ comic.ishardcover ? "Dura" : "Blanda" }}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="pagination-container">
-      <nav aria-label="Page navigation">
-        <ul class="pagination">
-          <li class="page-item" [class.disabled]="currentPage === 1">
-            <a class="page-link" (click)="goToPage(1)" aria-label="First"> << </a>
-          </li>
-          <li class="page-item" [class.disabled]="currentPage === 1">
-            <a
-              class="page-link"
-              (click)="goToPage(currentPage - 1)"
-              aria-label="Previous"
-            >
-              <
-            </a>
-          </li>
-          <li class="page-item">
-            <span class="page-link">
-              {{ currentPage }}
-            </span>
-          </li>
-          <li
-            class="page-item"
-            [class.disabled]="currentPage === getTotalPages()"
-          >
-            <a
-              class="page-link"
-              (click)="goToPage(currentPage + 1)"
-              aria-label="Next"
-            >
-              >
-            </a>
-          </li>
-          <li
-            class="page-item"
-            [class.disabled]="currentPage === getTotalPages()"
-          >
-            <a
-              class="page-link"
-              (click)="goToPage(getTotalPages())"
-              aria-label="Last"
-            >
-              >>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+          </th>
 
-  
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let comic of comicsOnCurrentPage">
+          <td><a [routerLink]="['/comic', comic.isbn]"></a>{{ comic.isbn }}</td>
+          <td><a [routerLink]="['/comic', comic.isbn]">{{ comic.title }}</a></td>
+          <td>{{ comic.author }}</td>
+          <td>
+            <span *ngFor="let genre of comic.genres; let last = last">
+              {{ genre.name }}{{ !last ? ", " : "" }}
+            </span>
+          </td>
+          <td>{{ comic.price }} €</td>
+          <td>{{ comic.ishardcover ? "Dura" : "Blanda" }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="pagination-container">
+    <nav aria-label="Page navigation">
+      <ul class="pagination">
+        <li class="page-item" [class.disabled]="currentPage === 1">
+          <a class="page-link" (click)="goToPage(1)" aria-label="First">
+            << </a>
+        </li>
+        <li class="page-item" [class.disabled]="currentPage === 1">
+          <a class="page-link" (click)="goToPage(currentPage - 1)" aria-label="Previous">
+            < </a>
+        </li>
+        <li class="page-item">
+          <span class="page-link">
+            {{ currentPage }}
+          </span>
+        </li>
+        <li class="page-item" [class.disabled]="currentPage === getTotalPages()">
+          <a class="page-link" (click)="goToPage(currentPage + 1)" aria-label="Next">
+            >
+          </a>
+        </li>
+        <li class="page-item" [class.disabled]="currentPage === getTotalPages()">
+          <a class="page-link" (click)="goToPage(getTotalPages())" aria-label="Last">
+            >>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
