--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -32,6 +32,6 @@
   <div class="f-stick  "></div>
 
   <div class="register">
-    <button class="btn2 " type="submit"><strong>Crear cuenta</strong></button>
+    <a routerLink="/register"><button class="btn2 "><strong>Crear cuenta</strong></button></a>
   </div>
 </div>
