--- a/front/src/app/shared/headerclient/headerclient.component.html
+++ b/front/src/app/shared/headerclient/headerclient.component.html
@@ -12,7 +12,7 @@
       <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Cerrar Sesión</a>
     </div>
     <div class="icons d-none d-sm-none d-none d-md-block">
-      <img src="/assets/cart.png" alt="cart">
+      <a routerLink="/cart"><img src="/assets/cart.png" alt="cart"></a>
       <img src="/assets/user.png" alt="user">
       <span>{{ getLoggedInUsername() }}</span> 
     </div>
