--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -1,79 +1,15 @@
-<div class="container mt-5" style="background-color: #f0f0f0; padding: 20px; border-radius: 5px;">
-    <h2 style="text-align: center;">Formulario de Registro</h2>
-    <form (ngSubmit)="submitForm()" #registroForm="ngForm">
-      <div class="form-row">
-        <div class="form-group col-md-6">         
-          <input type="email" id="correo" class="form-control" name="correo" [(ngModel)]="register.correo" required placeholder="Correo eléctronico">
-        </div>
-        <div class="form-group">          
-            <div class="dropdown">
-                <button class="dropbtn">DNI / NIE v</button>
-                <div class="dropdown-content">
-                  <option>DNI</option>
-                  <option>NIE</option>
-          </div>
-          <div class="form-group">            
-            <input type="text" id="dniNumber" class="form-control" formControlName="dniNumber" required>
-          </div>
 
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-4">
-      
-          <input type="text" id="nombre" class="form-control" name="nombre" [(ngModel)]="register.name" required placeholder="Nombre">
-        </div>
-        <div class="form-group col-md-4">
-          
-          <input type="text" id="apellido1" class="form-control" name="apellido1" [(ngModel)]="register.surname" required placeholder="Apellido">
-        </div>
-        <div class="form-group col-md-4">
-          
-          <input type="text" id="apellido2" class="form-control" name="apellido2" [(ngModel)]="register.surname2" required placeholder="Apellido 2">
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-6">         
-          <input type="text" id="calle" class="form-control" name="calle" [(ngModel)]="register.street" required placeholder="Calle">
-        </div>
-        <div class="form-group col-md-2">         
-          <input type="text" id="numero" class="form-control" name="numero" [(ngModel)]="register.number" required placeholder="nº">
-        </div>
-        <div class="form-group col-md-2">          
-          <input type="text" id="portal" class="form-control" name="portal" [(ngModel)]="register.gate" placeholder="Portal">
-        </div>
-        <div class="form-group col-md-2">         
-          <input type="text" id="escalera" class="form-control" name="escalera" [(ngModel)]="register.stairs" placeholder="Escalera">
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-2">        
-          <input type="text" id="piso" class="form-control" name="piso" [(ngModel)]="register.flat" placeholder="Piso">
-        </div>
-        <div class="form-group col-md-2">       
-          <input type="text" id="letra" class="form-control" name="letra" [(ngModel)]="register.letter" placeholder="Letra">
-        </div>
-        <div class="form-group col-md-2">          
-          <input type="text" id="cp" class="form-control" name="cp" [(ngModel)]="register.postalcode" required placeholder="Codigo Postal">
-        </div>
-        <div class="form-group col-md-4">          
-          <input type="text" id="municipio" class="form-control" name="municipio" [(ngModel)]="register.town" required placeholder="Municipio">
-        </div>
-        <div class="form-group col-md-2">         
-          <input type="text" id="provincia" class="form-control" name="provincia" [(ngModel)]="register.province" required placeholder="Provincia">
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-6">          
-          <input type="password" id="password" class="form-control" name="password" [(ngModel)]="register.password" required placeholder="Contraseña">
-        </div>
-        <div class="form-group col-md-6">         
-          <input type="password" id="confirmPassword" class="form-control" name="confirmPassword" [(ngModel)]="confirmPassword" required placeholder="Confirmar Contraseña">
-        </div>
-      </div>
-      <div class="alert alert-danger" *ngIf="passwordsDoNotMatch">
-        Las contraseñas no coinciden. Por favor, inténtalo de nuevo.
-      </div>
-      <button type="submit" class="btn btn-primary">Registrarse</button>
-    <!-- </form> -->
-  </div>
-  
+<div class="container">
+  <div class="row">
+      <div class="col-md-12">
+            <h1>Registro</h1>
+          <form [formGroup]="registrationForm">
+              <div class="form-group">           
+                  <input  type="email" id="email" class="form-control" formControlName="email" required placeholder="Correo Electrónico" [(ngModel)]="newCustomer.email">               
+                  <div *ngIf="registrationForm.get('email')?.hasError('required') && registrationForm.get('email')?.touched" class="text-light">
+                    El correo electrónico es obligatorio.
+                    </div>
+                  <div *ngIf="registrationForm.get('email')?.hasError('email') && registrationForm.get('email')?.touched" class="text-light">
+                    Ingresa un correo electrónico válido.
+                  </div>
+                </div>
