--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -13,3 +13,14 @@
                     Ingresa un correo electrónico válido.
                   </div>
                 </div>
+                <div class="form-row">
+                  <div class="form-group col-md-6"> 
+                    <select id="dniType" class="form-control" formControlName="dniType" required [(ngModel)]="selectedDniType">
+                      <option [value]="'DNI'">DNI <i class="bi bi-chevron-down"></i></option>
+                      <option [value]="'NIE'">NIE</option>
+                    </select>
+                  </div>
+                  <div class="form-group col-md-6">                   
+                      <input type="text" id="dniNumber" class="form-control" formControlName="dni" required placeholder="Nº" [(ngModel)]="newCustomer.dni">
+                </div>
+              </div> 
