--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -24,3 +24,12 @@
                       <input type="text" id="dniNumber" class="form-control" formControlName="dni" required placeholder="Nº" [(ngModel)]="newCustomer.dni">
                 </div>
               </div> 
+              <div class="form-group">             
+                <input  type="text" id="name" class="form-control" formControlName="name" required placeholder="Nombre" [(ngModel)]="newCustomer.name">
+                <div *ngIf="registrationForm.get('name')?.hasError('required') && registrationForm.get('name')?.touched" class="text-light">
+                  El nombre es obligatorio.
+                </div>
+                <div *ngIf="registrationForm.get('name')?.hasError('pattern') && registrationForm.get('name')?.touched" class="text-light">
+                  Ingresa un nombre válido.
+                </div>
+            </div>            
