--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -44,4 +44,38 @@
           <div class="form-group">                  
               <input type="text" id="surname2" class="form-control" formControlName="surname2" required placeholder="Apellido 2">
           </div>  
-        </div>                      
+        </div>     
+        <div class="form-group-adress">                 
+          <input type="text" id="street" class="form-control" formControlName="street" placeholder="Calle">
+                  
+      <div class="form-row-inline">
+          <div class="form-group col-md-2">
+              <input type="text" id="number" class="form-control small-input" formControlName="number" placeholder="Nº">
+          </div>
+          <div class="form-group col-md-2">                   
+              <input type="text" id="gate" class="form-control small-input" formControlName="gate"placeholder="Portal">
+          </div>
+          <div class="form-group col-md-2">
+             
+              <input type="text" id="stairs" class="form-control small-input" formControlName="stairs" placeholder="Escalera">
+          </div>
+          <div class="form-group col-md-2">
+      
+              <input type="text" id="floor" class="form-control small-input" formControlName="floor" placeholder="Piso">
+          </div>
+          <div class="form-group col-md-2">
+              <input type="text" id="letter" class="form-control small-input" formControlName="letter" placeholder="Letra">
+          </div>
+      </div>            
+      <div class="form-row">
+          <div class="form-group col-md-6">
+              <input type="text" id="postalCode" class="form-control small-input" formControlName="postalCode" required placeholder="Código Postal">
+          </div>
+          <div class="form-group col-md-6">                    
+              <input type="text" id="municipality" class="form-control small-input" formControlName="town" required placeholder="Municipio">
+          </div>
+          <div class="form-group col-md-6">                    
+            <input type="text" id="province" class="form-control small-input" formControlName="province" required placeholder="Provincia">
+        </div>
+      </div>  
+    </div>                      
