fixed form register

--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -1,4 +1,4 @@
-
+<app-headerlogin></app-headerlogin>
 <div class="container">
   <div class="row">
       <div class="col-md-12">
@@ -72,7 +72,7 @@
               <input type="text" id="postalCode" class="form-control small-input" formControlName="postalCode" required placeholder="Código Postal">
           </div>
           <div class="form-group col-md-6">                    
-              <input type="text" id="municipality" class="form-control small-input" formControlName="town" required placeholder="Municipio">
+              <input type="text" id="town" class="form-control small-input" formControlName="town" required placeholder="Municipio">
           </div>
           <div class="form-group col-md-6">                    
             <input type="text" id="province" class="form-control small-input" formControlName="province" required placeholder="Provincia">
@@ -103,3 +103,4 @@
 </div>
 </div>
           
+<app-footer></app-footer>
