fixed line 96 and 101 from scss register-a

--- a/front/src/app/components/register-a/register-a.component.scss
+++ b/front/src/app/components/register-a/register-a.component.scss
@@ -93,11 +93,12 @@
           margin-left: -6vh;
         }
         #postalCode{
-          width: 18vh;
+          width: 13vh;
         }
   
         #town{
-          width: 16.2vh;
+          width: 18vh;
+          margin-right: 6vh;
         }
   
         #province{
