added route, login to register and register to login

--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -98,6 +98,10 @@
   <button type="submit" class="btn btn-primary" (click)="registerCustomer()">
     <p>Registro</p>
   </button>
+
+  <div class="login">
+    <p>¿Ya tienes una cuenta? <strong routerLink="/login">Accede</strong></p>
+  </div>
 </form>
 </div>
 </div>
