--- a/front/src/app/components/register-a/register-a.component.scss
+++ b/front/src/app/components/register-a/register-a.component.scss
@@ -120,6 +120,12 @@
           margin-top: -0.5vh;
         }
        }
+       .login{
+        text-align: center;
+        color: #fff;
+        margin-top: 1vh;
+        cursor: pointer;
+       }
     }
   
     
