Solved problems in views

--- a/front/src/app/components/comic-table/comic-table.component.html
+++ b/front/src/app/components/comic-table/comic-table.component.html
@@ -118,7 +118,7 @@
               {{ genre.name }}{{ !last ? ", " : "" }}
             </span>
           </td>
-          <td>{{ comic.price }}</td>
+          <td>{{ comic.price }}€</td>
           <td>{{ comic.ishardcover ? "Dura" : "Blanda" }}</td>
         </tr>
       </tbody>
