--- a/front/src/app/components/register/register.component.html
+++ b/front/src/app/components/register/register.component.html
@@ -83,7 +83,7 @@
           <div class="form-row">
             <div class="form-group col-md-6">
               <input type="text" id="postalCode" class="form-control small-input" formControlName="postalCode" required
-                placeholder="Código Postal">
+                placeholder="CP">
             </div>
             <div class="form-group col-md-6">
               <input type="text" id="town" class="form-control small-input" formControlName="town" required
@@ -126,11 +126,10 @@
         
       
   <div class="login">
-    <p>¿Ya tienes una cuenta? <strong routerLink="/login">Accede</strong></p>
+    <p>¿Ya tienes una cuenta? <strong routerLink="">Accede</strong></p>
   </div>
 </form>
     </div>
   </div>
 </div>
 
-<app-footer></app-footer>
