--- a/front/src/app/components/register/register.component.scss
+++ b/front/src/app/components/register/register.component.scss
@@ -32,7 +32,8 @@
         
         #dniType{
           width: 11vh; 
-          margin-left:-4.2vh ;            
+          margin-left:-4.2vh ; 
+          height: 5vh;           
         }
   
         #dniNumber{
@@ -103,6 +104,7 @@
   
         #province{
           width: 19vh;
+          margin-left: 1vh;
         }
   
       }
