--- a/front/src/app/components/shoping-cart-client/shoping-cart-client.component.scss
+++ b/front/src/app/components/shoping-cart-client/shoping-cart-client.component.scss
@@ -1,339 +1,104 @@
 table {
-    margin-top: 3vh;
-    color: #fff;
-    text-align: left;
-    font-size: 2vh;
-    border-radius: 2vh;
-    overflow: hidden;
-    border-spacing: 0;
-    border-collapse: separate;
-    border: 0.4vh solid black;
+  width: 98%;
+  margin-top: 3vh;
+  color: #fff;
+  text-align: left;
+  font-size: 2vh;
+  border-radius: 2vh;
+  overflow: hidden;
+  border-spacing: 0;
+  border-collapse: separate;
+  border: 0.4vh solid black;
+}
+
+tbody {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.table-responsive {
+  margin-top: 0.1vh;
+
+}
+
+.container-th {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  width: 100%;
+  position: relative;
+}
+
+.container-th p {
+  margin: 0px;
+}
+
+th {
+  border: 0.13vh solid white;
+  background-color: rgba(29, 41, 81, 1);
+  color: #fff;
+  text-decoration: underline;
+  text-align: center;
+  width: 5vh;
+}
+
+td {
+  border-bottom: 0.4vh solid #fff;
+  border: 0.13vh solid black;
+}
+
+tr {
+  border-bottom: 0.13vh solid #ccc;
+}
+
+.container {
+  max-width: 100%;
+}
+
+@media (min-width: 1024px) {
+  table {
+    font-size: 2.70vh;
+    margin-top: 3.2vh;
   }
-  
-  tbody {
-    text-align: center;
+
+}
+
+@media (min-width: 1440px) {
+  table {
+    font-size: 2.70vh;
+  }
+}
+
+@media (min-width: 290px) and (max-width:991px) {
+
+  table {
+    font-size: 3vw;
+  }
+
+  th {
+    font-size: 2.1vw;
     vertical-align: middle;
   }
-  
-  .table-responsive {
-    margin-top: 0.1vh;
-  }
-  
+
   .container-th {
     display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    width: 100%;
-    position: relative;
-  }
-  
-  .container-th p {
-    margin: 0px;
-  }
-  
-  .search {
-    margin-left: 100%;
-  }
-  
-  label {
-    margin: 0px;
-  }
-  
-  
-  th {
-    border: 0.13vh solid white;
-    background-color: rgba(29, 41, 81, 1);
-    color: #fff;
-    text-decoration: underline;
-    text-align: center;
-    width: 5vh;
-  }
-  
-  td {
-    border-bottom: 0.4vh solid #fff;
-    border: 0.13vh solid black;
-  }
-  
-  .bi {
-    font-size: small;
-    color: #fff;
-    text-align: center;
-  }
-  
-  .bi-search thead {
-    border-radius: 0 0 2.70vh 2.70vh;
     align-items: center;
-  }
-  
-  .btn {
-  
-    margin-left: 0px;
     justify-content: center;
-    padding: 0 0.5vh;
-    width: 2vh;
   }
-  
-  tr {
-    border-bottom: 0.13vh solid #ccc;
-  }
-  
-  .pagination-container {
-    margin-top: 1vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10vh;
-  }
-  
-  .sorting-container {
-    position: absolute;
-    top: 13.53vh;
-    left: 2.70vh;
-  }
-  
-  .search-popup {
-    position: absolute;
-    background-color: rgba(29, 41, 81, 1);
-    border: 0.13vh solid #ccc;
-    padding: 1.35vh;
-    z-index: 1;
-  }
-  
-  .filter-popup {
-    position: absolute;
-    background-color: rgba(29, 41, 81, 1);
-    border: 0.13vh solid #ccc;
-    padding: 1.35vh;
-    z-index: 1;
-    top: 42%;
-    border-radius: 15px;
-  }
-  
-  .filter-popup select,
-  .search-popup input[type="text"] {
-    padding: 0.67vh;
-    margin-top: 0.67vh;
-  }
-  
-  .show-popup {
-    display: block;
-  }
-  
-  .filter-icon {
-    margin-left: 56%;
-    cursor: pointer;
-    width: 3vh;
-    margin-left: 100%;
-    /*   margin-right: 8vh;  */
-  }
-  
-  .btn-primary {
-    margin-top: 2vh;
-    width: 100%;
-  }
-  
-  .search {
-    text-align: left;
-    /*   width: 4vh;  */
-  }
-  
-  img,
-  svg {
-    width: 2.3vh;
-    vertical-align: middle;
-  }
-  
-  
-  /* @media (min-width: 320px) {
-    table {
-      font-size: 1vh;
-    }
-    .pagination-container {
-      
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 1vh;
-      margin-bottom: 2vh;
-    }
-    .filter-icon {
-      margin-left: 4%;
-      cursor: pointer;
-      width: 1.5vh; 
-      margin-right: 8vh; 
-    }
-    img, svg {
-      width: 1.5vh; 
-      vertical-align: middle;
-    }
-    .search{
-      margin-left: 4%;
-      cursor: pointer;
-      width: 1.5vh; 
-      margin-right: 8vh; 
-    }
-  } */
-  
-  .container {
-    max-width: 100%;
-  }
-  
-  
-  @media (min-width: 768px) {
-    .pagination-container {
-  
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 1vh;
-      margin-bottom: 3vh;
-    }
-  }
-  
-  
-  @media (min-width: 1024px) {
-    table {
-      font-size: 2.70vh;
-      margin-top: 3.2vh;
-    }
-  
-    .pagination-container {
-  
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 2vh;
-      margin-bottom: 7.5vh;
-    }
-  
-    .filter-icon {
-      margin-left: 56%;
-      cursor: pointer;
-      width: 3vh;
-      margin-left: 3vh;
-    }
-  
-    img,
-    svg {
-      width: 2.3vh;
-      vertical-align: middle;
-    }
-  
-    .search {
-      /*    margin-left: 4%; */
-      cursor: pointer;
-      width: 3vh;
-      /*     margin-right: 8vh;  */
-    }
-  }
-  
-  
-  @media (min-width: 1440px) {
-    table {
-      font-size: 2.70vh;
-    }
-  }
-  
-  @media (min-width: 992px) {
-    .container-search {
-      display: none;
-    }
-  
-  }
-  
-  
-  
-  @media (min-width: 290px) and (max-width:991px) {
-    .container-search {
-      display: flex;
-      justify-content: center;
-      max-width: 500px;
-      background: rgba(29, 41, 81, 1);
-      border-radius: 30px;
-      margin-top: 20px;
-      padding: 15px;
-      align-items: center;
-  
-    }
-  
-    .search-up {
-      width: 90%;
-      border-radius: 30px;
-      padding: 7px;
-    }
-  
-    .search-up::placeholder {
-      text-align: center;
-    }
-  
-    .image-search-1 {
-      width: 20px;
-      height: 20px;
-      margin-left: 10px;
-    }
-  
-    table {
-      font-size: 3vw;
-    }
-  
-    .pagination-container {
-  
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 1vh;
-      margin-bottom: 2vh;
-    }
-  
-    .filter-icon {
-      display: none;
-  
-    }
-  
-    img,
-    svg {
-      width: 1.4vh;
-      margin-left: 1.2px;
-  
-    }
-  
-    /*   .search{
-      margin-left: 4%;
-      cursor: pointer;
-      width: 1.5vh; 
-      margin-right: 8vh;  
-    } */
-  
-    .quitar {
-      display: none;
-    }
-  
-    th {
-      font-size: 2.1vw;
-      vertical-align: middle;
-    }
-  
-    .btn {
-      padding: 0px;
-      width: auto;
-      margin: 0px;
-    }
-  
-    label {
-      display: none;
-    }
-  
-    .quitar-2 {
-      display: none;
-    }
-  
-    .container-th {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  
-    .search {
-      display: none;
-    }
-  }
+}
+
+.table-resumen {
+  width: 90%;
+  margin-left: 0.5%;
+  float: left;
+}
+
+.btn {
+  font-size: x-large;
+  color: rgba(29, 41, 81, 1);
+  border: 4px solid rgba(29, 41, 81, 1);
+  background-color: rgb(255, 255, 255);
+  border-radius: 8px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
