--- a/front/src/app/components/register/register.component.html
+++ b/front/src/app/components/register/register.component.html
@@ -119,7 +119,7 @@
             Las contraseñas no coinciden.
           </div>
         </div>
-        <button type="submit" class="btn btn-primary" (click)="registerCustomer()">
+        <button class="btn btn-primary" (click)="registerCustomer()">
           <p>Registro</p>
         </button>
 
