--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -66,7 +66,7 @@
       </div>
       <div class="form-row">
           <div class="form-group col-md-6">
-              <input type="text" id="postalCode" class="form-control small-input" formControlName="postalCode" required placeholder="Código Postal">
+              <input type="text" id="postalcode" class="form-control small-input" formControlName="postalcode" required placeholder="Código Postal">
           </div>
           <div class="form-group col-md-6">
               <input type="text" id="town" class="form-control small-input" formControlName="town" required placeholder="Municipio">
@@ -95,10 +95,9 @@
     <p>Registro</p>
   </button>
   <div class="login">
-    <p>¿Ya tienes una cuenta? <strong routerLink="/login">Accede</strong></p>
+    <p>¿Ya tienes una cuenta? <strong routerLink="">Accede</strong></p>
   </div>
 </form>
 </div>
 </div>
 </div>
-<app-footer></app-footer>
