--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -66,7 +66,7 @@
       </div>
       <div class="form-row">
           <div class="form-group col-md-6">
-              <input type="text" id="postalCode" class="form-control small-input" formControlName="postalCode" required placeholder="Código Postal">
+              <input type="text" id="postalcode" class="form-control small-input" formControlName="postalcode" required placeholder="Código Postal">
           </div>
           <div class="form-group col-md-6">
               <input type="text" id="town" class="form-control small-input" formControlName="town" required placeholder="Municipio">
