--- a/front/src/app/components/comic-table/comic-table.component.scss
+++ b/front/src/app/components/comic-table/comic-table.component.scss
@@ -9,7 +9,9 @@ table {
   border-collapse: separate;
   border: 0.4vh solid black;
 }
-
+a{
+  cursor:pointer;
+}
 tbody {
   text-align: center;
   vertical-align: middle;
@@ -124,7 +126,7 @@ tr {
   cursor: pointer;
   width: 3vh;
   margin-left: 100%;
-  /*   margin-right: 8vh;  */
+
 }
 
 .btn-primary {
@@ -134,7 +136,7 @@ tr {
 
 .search {
   text-align: left;
-  /*   width: 4vh;  */
+
 }
 
 img,
@@ -144,35 +146,7 @@ svg {
 }
 
 
-/* @media (min-width: 320px) {
-  table {
-    font-size: 1vh;
-  }
-  .pagination-container {
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1vh;
-    margin-bottom: 2vh;
-  }
-  .filter-icon {
-    margin-left: 4%;
-    cursor: pointer;
-    width: 1.5vh; 
-    margin-right: 8vh; 
-  }
-  img, svg {
-    width: 1.5vh; 
-    vertical-align: middle;
-  }
-  .search{
-    margin-left: 4%;
-    cursor: pointer;
-    width: 1.5vh; 
-    margin-right: 8vh; 
-  }
-} */
+
 
 .container {
   max-width: 100%;
@@ -220,10 +194,10 @@ svg {
   }
 
   .search {
-    /*    margin-left: 4%; */
+
     cursor: pointer;
     width: 3vh;
-    /*     margin-right: 8vh;  */
+
   }
 }
 
@@ -297,12 +271,7 @@ svg {
 
   }
 
-  /*   .search{
-    margin-left: 4%;
-    cursor: pointer;
-    width: 1.5vh; 
-    margin-right: 8vh;  
-  } */
+
 
   .quitar {
     display: none;
@@ -337,5 +306,3 @@ svg {
     display: none;
   }
 }
-
-
