--- a/front/src/app/components/login/login.component.scss
+++ b/front/src/app/components/login/login.component.scss
@@ -1,18 +1,16 @@
 .container{
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
     justify-items: center;
     width: 80%;
-    margin-top: 2%;
-    margin-bottom: -2%;
-    
+    margin-top: 0.75%;
+  
 }
 .card{
     background: rgba(128, 128, 128, 1);
     border: 1px solid black;
     border-radius: 28px;
- 
+    margin-top: 2%;
 }
 .body{
     padding: 0%;
@@ -41,7 +39,7 @@
     height: 10px;
   
     border: 1px solid black;
-    border-radius: 28px;
+    border-radius: 10px;
     font-size: 14px;
   
 
@@ -61,7 +59,8 @@
     height: 375px;
     background: rgba(29, 41, 81, 1);
     border: 1px solid black;
- 
+    margin-top: 4%;
+
 
 }
 
@@ -69,8 +68,10 @@
     width: 168px;
     height: 50px;
     background: rgba(128, 128, 128, 1);
-    border-radius: 20px;
+    border-radius: 10px;
     color: #ffffff;
+    text-align: center;
+    margin-top: 5%;
 }
 
 @media (max-width: 500px) {
@@ -99,6 +100,6 @@
         justify-items: center;
         width: 87%;
         margin-top: 5%;
-        margin-bottom: -2%;
+        
     }        
 }
