--- a/front/src/app/components/shoping-cart-client/shoping-cart-client.component.html
+++ b/front/src/app/components/shoping-cart-client/shoping-cart-client.component.html
@@ -74,7 +74,7 @@
     </table>
 
     <div class="container">
-      <div class="row">
+      <div class="row mb-5">
         <div class="col-6 ">
           <table class="table table-striped table-resumen ">
             <thead>
