--- a/front/src/app/shared/footer/footer.component.scss
+++ b/front/src/app/shared/footer/footer.component.scss
@@ -5,6 +5,8 @@
 .main-footer {
   position: fixed;
   bottom: 0;
+  margin-top: 5%;
+
 }
 }
 
@@ -25,7 +27,7 @@
 }
 
 .main-footer {
-  // position: relative;
+ 
   bottom: 0;
   left: 0;
   width: 100%;
