--- a/front/src/app/components/comic-table/comic-table.component.html
+++ b/front/src/app/components/comic-table/comic-table.component.html
@@ -2,7 +2,6 @@
   <div class="container-search">
     <input ng-model="searchText" class="search-up" type="text" placeholder="Introduce tu búsqueda"
       [(ngModel)]="searchTextGlobal" (input)="globalsearch()" />
-    <img (click)="globalsearch()" class="image-search-1" src="../../../assets/buscar.png" alt="buscar">
   </div>
 
 
@@ -20,7 +19,7 @@
                 <img src="../../../assets/buscar.png" alt="Filtrar por codigo" class="filter-icon" />
               </label>
             </div>
-            <div #popup (mouseleave)="onMouseOut(popup)" class="filter-popup" *ngIf="showisbnFilterPopup">
+            <div #popup class="filter-popup" *ngIf="showisbnFilterPopup">
               <input id="authorFilter" type="text" class="form-control" [(ngModel)]="columnFilters. isbn"
                 (input)="applyFilters()" placeholder="Buscar código..." />
             </div>
