--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -95,7 +95,7 @@
     <p>Registro</p>
   </button>
   <div class="login">
-    <p><u>¿Ya tienes una cuenta? <strong routerLink="/login">Accede</strong></u> </p>
+    <p><u>¿Ya tienes una cuenta? <strong routerLink="">Accede</strong></u> </p>
   </div>
 </form>
 </div>
