--- a/front/src/app/components/login/login.component.scss
+++ b/front/src/app/components/login/login.component.scss
@@ -1,105 +1,95 @@
-.container{
-    display: grid; 
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items: center;
-    width: 80%;
-    margin-top: 0.75%;
-  
-}
-.card{
-    background: rgba(128, 128, 128, 1);
-    border: 1px solid black;
-    border-radius: 28px;
-    margin-top: 2%;
-}
-.body{
-    padding: 0%;
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  width: 80%;
+  margin-top: 0.75%;
 }
 
-.registeryou{
-    display: none;
+.card {
+  background: rgba(128, 128, 128, 1);
+  border: 1px solid black;
+  border-radius: 28px;
+  margin-top: 2%;
 }
+
+.card-body {
+  padding: 5%;
+}
+
+.registeryou {
+  display: none;
+}
+
 .mb-md-5 {
-    background: rgba(128, 128, 128, 1);
+  background: rgba(128, 128, 128, 1);
 }
 
 .fw-bold {
-    color: #ffffff;
-    margin-top: -9px;
+  color: #ffffff;
+  margin-top: -9px;
 }
 
 .form-label {
-    color: #ffffff;
-    font-size: 14px;
+  color: #ffffff;
+  font-size: 14px;
 }
 
 .form-control {
-   
-    width: 75%;
-    height: 10px;
-  
-    border: 1px solid black;
-    border-radius: 10px;
-    font-size: 14px;
-  
-
+  width: 75%;
+  height: 40px; 
+  border: 1px solid black;
+  border-radius: 10px;
+  font-size: 14px;
 }
 
 .text2 {
-    color: #ffffff;
+  color: #ffffff;
 }
- 
+
 .dont {
-    color: #ffffff;
-    font-size: 14px;
+  color: #ffffff;
+  font-size: 14px;
 }
 
 .f-stick {
-    width: 0.938rem;
-    height: 375px;
-    background: rgba(29, 41, 81, 1);
-    border: 1px solid black;
-    margin-top: 4%;
-
-
+  width: 0.938rem;
+  height: 375px;
+  background: rgba(29, 41, 81, 1);
+  border: 1px solid black;
+  margin-top: 4%;
 }
 
 .btn2 {
-    width: 168px;
-    height: 50px;
-    background: rgba(128, 128, 128, 1);
-    border-radius: 10px;
-    color: #ffffff;
-    text-align: center;
-    margin-top: 5%;
+  width: 168px;
+  height: 50px;
+  background: rgba(128, 128, 128, 1);
+  border-radius: 10px;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 5%;
 }
 
-@media (max-width: 500px) {
-    .f-stick{ display: none;}
-    .register{display: none;}
-    .card-body {width: 100%;
-                margin: 0;
-    }
-    .form-control{
-        width: 100%;
-    }
-    .container{
-        grid-template-columns: 1fr;
-        width: 100%;
-    }
-    .card{
-        width: 80vw;
-    } 
-    .registeryou{
-        display:inline;
-    }    
-    .container{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        align-items: center;
-        justify-items: center;
-        width: 87%;
-        margin-top: 5%;
-        
-    }        
+
+@media (max-width: 768px) {
+  .container {
+      width: 90%;
+  }
+  .btn2{display: none;}
+}
+
+@media (max-width: 576px) {
+  .container {
+      grid-template-columns: 1fr;
+      margin-bottom: 6vh;
+      margin-top: 6vh;
+  }
+  .registeryou {
+      display: block;
+  }
+  .f-stick {
+      display: none;
+  }
+  .btn2{display: none;}
 }
