--- a/front/src/app/views/homeloginview/homeloginview.component.html
+++ b/front/src/app/views/homeloginview/homeloginview.component.html
@@ -1,3 +1,6 @@
-<app-headerlogin></app-headerlogin>
-<app-banner></app-banner>
-<app-login></app-login>
+<header><app-headerlogin></app-headerlogin></header>
+
+<body>
+    <app-banner></app-banner>
+    <app-login></app-login>
+</body>
