--- a/front/src/app/components/login/login.component.scss
+++ b/front/src/app/components/login/login.component.scss
@@ -10,7 +10,7 @@ body{
     margin-top: 2%;
     margin-bottom: -2%;
     padding-bottom:10%;
-    border: 8px solid black;
+    // border: 8px solid black;
     
 }
 .card{
