changes in line 18 from register-a component

--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -13,10 +13,9 @@
                     Ingresa un correo electrónico válido.
                   </div>
                 </div>
-                <div class="form-row">
-                 
+                <div class="form-row">                 
                   <div class="form-group">
-                      <input type="text" id="dniNumber" class="form-control" formControlName="dni" required placeholder="Nº" [(ngModel)]="newCustomer.dni">
+                      <input type="text" id="dniNumber" class="form-control" formControlName="dni" required placeholder="DNI/NIE" [(ngModel)]="newCustomer.dni">
                 </div>
               </div>
               <div class="form-group">
