changes in line 58 from register-a component

--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -55,7 +55,7 @@
               <input type="text" id="floor" class="form-control" formControlName="floor" placeholder="Piso">
           </div>
           <div class="col-4">
-              <input type="text" id="letter" class="form-control" formControlName="letter" placeholder="Letra">
+              <input type="text" id="letter" class="form-control" formControlName="letter" placeholder="Puerta">
           </div>
  
       <div class="form-row">
