changes in line 43 and 44

--- a/front/src/app/components/register-a/register-a.component.scss
+++ b/front/src/app/components/register-a/register-a.component.scss
@@ -40,7 +40,8 @@
 
       .login{
         color: #fff;
-        text-align: center;       
+        text-align: center;  
+        cursor: pointer;     
       }
     }
 
