Create modficated comics

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,5 +1,3 @@
 
-<!-- <router-outlet></router-outlet>
-<app-footer></app-footer> -->
-
-<app-modificate-comics></app-modificate-comics>
+<router-outlet></router-outlet>
+<app-footer></app-footer> 
