--- a/front/src/app/components/admin/comictableadmin/comictableadmin.component.html
+++ b/front/src/app/components/admin/comictableadmin/comictableadmin.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="container-search">
       <input ng-model="searchText" class="search-up" type="text" placeholder="Introduce tu búsqueda"
         [(ngModel)]="searchTextGlobal" (input)="globalsearch()" />
@@ -145,4 +145,4 @@
           </li>
         </ul>
       </nav>
-    </div>
+    </div> -->
